<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.step.practical.StepPractical1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_practical1_help" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/stepPractical1BtnSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_practical1_sub" />

            <TextView
                android:id="@+id/stepPractical1TvNum"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/step_practical1_num" />

            <Button
                android:id="@+id/stepPractical1BtnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_practical1_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stepPractical1TvMoney"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/step_practical1_money" />

            <Button
                android:id="@+id/stepPractical1BtnBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_practical1_buy" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/stepPractical1BtnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextstep" />
</LinearLayout>