<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.step.agg.StepAgg6">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_agg6_help" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stepAgg6TvBullet"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/step_agg6_bullet" />

            <Button
                android:id="@+id/stepAgg6BtnShoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_agg6_shoot" />

            <Button
                android:id="@+id/stepAgg6BtnReplenish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_agg6_replenish" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/stepAgg6BtnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextstep" />
</LinearLayout>