<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.step.basic.StepBasic5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_basic5_help" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp">

                <ProgressBar
                    android:id="@+id/stepBasic5ProBarHp"
                    style="@style/ProgressBarHpStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:max="20000"
                    tools:progress="15000" />
            </LinearLayout>

            <Button
                android:id="@+id/stepBasic5BtnAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_basic5_attack" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/stepBasic5BtnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextstep" />
</LinearLayout>